--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
 				position: relative;
 			}
 		</style>
+		<script type="text/javascript" src="jquery-1.7.1.min.js"></script>
 		<script type="text/javascript">
 		function init() {
 			if (io.el('countdown')) {
